--- a/archlinuxcn/linux-amd-drm-next/lilac.yaml
+++ b/archlinuxcn/linux-amd-drm-next/lilac.yaml
@@ -9,7 +9,7 @@ time_limit_hours: 4
 build_prefix: extra-x86_64
 
 update_on:
-  - source: vcs
-    vcs: git+https://gitlab.freedesktop.org/agd5f/linux.git
+  - source: git
+    git: https://gitlab.freedesktop.org/agd5f/linux.git
     use_max_tag: true
     query: amd-drm-next-
