--- a/archlinuxcn/qemu-git/lilac.yaml
+++ b/archlinuxcn/qemu-git/lilac.yaml
@@ -11,6 +11,6 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur:
-  - source: vcs
-    vcs: git://git.qemu.org/qemu.git
+  - source: gitlab
+    gitlab: qemu-project/qemu
 
