python-mmpycocotools: fix https://github.com/open-mmlab/cocoapi/issues/29

--- a/archlinuxcn/python-mmpycocotools/PKGBUILD
+++ b/archlinuxcn/python-mmpycocotools/PKGBUILD
@@ -27,6 +27,11 @@ source=("${_pkgname}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/s
 sha512sums=('8eb699757531edbb689f28895d0613d1f7bea88a6a6fadb4d4d30021ba7af8bd9e72f307c635746388b67817a6149b14fd82d1b03a84ca77adade4c4bfa77281'
             'b0dc48c4d0fa9eaa101bf94dd75df4b23a9281ba714b0c1f01204d2d48c6f1de14cbe093590b16ef614168621146c9f708f6af2543561a56c76c81b66113c435')
 
+prepare() {
+  # fix https://github.com/open-mmlab/cocoapi/issues/29
+  sed -i "s,np.float,float,g" "${_pkgname}-${pkgver}/pycocotools/cocoeval.py"
+}
+
 build() {
   cd "${_pkgname}-${pkgver}"
   python setup.py build
