--- a/archlinuxcn/python-mmpycocotools/lilac.yaml
+++ b/archlinuxcn/python-mmpycocotools/lilac.yaml
@@ -6,6 +6,8 @@ build_prefix: extra-x86_64
 update_on:
   - source: pypi
     pypi: mmpycocotools
+  - source: manual
+    manual: 1
   - alias: python
 # vim:set ts=2 sw=2 et:
 
