--- a/archlinuxcn/linux-next-git/PKGBUILD
+++ b/archlinuxcn/linux-next-git/PKGBUILD
@@ -6,17 +6,17 @@
 # Contributor:  Timofey Titovets <nefelim4ag@gmail.com>
 
 pkgbase=linux-next-git
-pkgver=20230220.r0.gd2af0fa4bfa4
+pkgver=20230223.r0.g0222aa9800b2
 _srcname=linux-next
 pkgrel=1
 pkgdesc='Linux NEXT'
 arch=('x86_64')
 url="http://www.kernel.org/"
 license=('GPL2')
-options=('!strip')
+options=('!strip' '!debug')
 makedepends=(
-  bc kmod libelf pahole cpio perl tar xz
-  xmlto python-sphinx python-sphinx_rtd_theme graphviz imagemagick
+  bc libelf pahole cpio perl tar xz gettext
+  xmlto python-sphinx python-sphinx_rtd_theme graphviz imagemagick texlive-latexextra
   git
 )
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/next/${_srcname}.git"
@@ -49,6 +49,8 @@ prepare() {
             echo "Applying patch $src..."
             patch -Np1 < "../$src"
         done
+    ### heavysink: Disable Kernel IBT to circumvent btf__dedup error
+        sed -i 's/CONFIG_X86_KERNEL_IBT=y/CONFIG_X86_KERNEL_IBT=n/g' ../config
 
     ### Setting config
         echo "Setting config..."
