ttf-plangothic: fix version prefix
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/ttf-plangothic/PKGBUILD
+++ b/archlinuxcn/ttf-plangothic/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Coelacanthus <CoelacanthusHex@gmail.com>
 
 pkgname=ttf-plangothic
-epoch=1
-pkgver=.0.8.5727
+epoch=2
+pkgver=0.8.5727
 pkgrel=1
 pkgdesc='A project based on SourceHan to expand and supplement characters, and its ultimate goal is to complete the entire Unicode as much as possible.'
 url='https://github.com/Fitzgerald-Porthmouth-Koenigsegg/Plangothic'
