text-engine: update AUR maintainer
ref: #3134

--- a/archlinuxcn/text-engine/PKGBUILD
+++ b/archlinuxcn/text-engine/PKGBUILD
@@ -1,23 +1,26 @@
-# Maintainer: musiclover <musiclover382@protonmail.com>
+# Maintainer: Mattia Borda <mattiagiovanni.borda@icloud.com>
 
 pkgname=text-engine
 pkgver=0.1.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A lightweight rich-text framework for GTK"
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/mjakeman/$pkgname"
 license=('LGPL3')
-depends=('gtk4' 'json-glib' 'libadwaita' 'libxml2')
+depends=('json-glib' 'libadwaita' 'libxml2')
 makedepends=('meson')
 source=($url/archive/v$pkgver.tar.gz)
 sha256sums=('cf540d2c0150a46e8ec81c4532550357707c5d07b6116dc52e3869b1902f515f')
 
 build() {
-  arch-meson $pkgname-$pkgver build
-  meson compile -C build
+	arch-meson $pkgname-$pkgver build
+	meson compile -C build
+}
+
+check() {
+	meson test -C build
 }
 
 package() {
-  meson install -C build --destdir "$pkgdir"
-  install -Dm644 $pkgname-$pkgver/COPYING "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+	DESTDIR="$pkgdir" meson install -C build
 }
