--- a/archlinuxcn/text-engine/lilac.yaml
+++ b/archlinuxcn/text-engine/lilac.yaml
@@ -4,7 +4,7 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build_script: aur_pre_build(maintainers=['musiclover'])
+pre_build_script: aur_pre_build(maintainers=['bordam'])
 
 post_build: aur_post_build
 
